--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     </head>
     <body>
         <p>This is an example of a simple HTML page with one paragraph.</p>
+        <iframe id="vs_iframe" src="https://www.viewstl.com/?embedded&url=https%3A%2F%2Fgithub.com%2Fadm-irb%2Fadm-irb.github.io%2Fblob%2Fmaster%2Fchicken.stl&noborder=yes" style="border:0;margin:0;width:100%;height:100%;"></iframe>
     </body>
 </html>
