--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <p>This is an example of a simple HTML page with one paragraph.</p>
-        <iframe id="vs_iframe" src="https://www.viewstl.com/?embedded&url=chicken.stl&noborder=yes" style="border:0;margin:0;width:100%;height:100%;"></iframe>
+        <iframe id="vs_iframe" src="https://www.viewstl.com/?embedded&url=https://raw.githubusercontent.com/adm-irb/adm-irb.github.io/master/chicken.stl&noborder=yes" style="border:0;margin:0;width:100%;height:100%;"></iframe>
     </body>
 </html>
