--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ ul#description li a:hover span {
             <span>
                 <strong>Sample Chamber</strong>
 				<p>
-                The sample is embedded in an agar cylinder held in the quartz chamber (QC). The light sheet position (IP) is adjusted thinnest at sample, optimizing optical sectioning (≈10 µm).
+                The sample is embedded in an agar cylinder (AC) held in the quartz chamber (QC). The light sheet position (IP) is adjusted thinnest at sample, optimizing optical sectioning (≈10 µm).
 				<p/>
             </span>
         </a>
