--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ ul#description li a:hover span {
             <span>
                 <strong>Sample Rotation</strong>
 				<p>
-                Rotates the sample through paired magnets, motor M2 and   a mechanism  allowing the Z-translation of the chamber.
+                Rotates the sample through paired magnets (PM), motor M3 and a mechanism (RM) allowing the Z-translation of the chamber.
 				<p/>
             </span>
         </a>
