--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>CSS Image Maps</title>
+<title>LEMOLISH</title>
+<body><h1><center><p>Hover the parts to read a description</p></center></h1></body>
 <style type="text/css">
 
 #container {
