--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>LEMOLISH</title>
-<body><h1><center><p>Hover the parts for their description</p></center></h1></body>
+<body><h1><center><p>Hover the boxes for description</p></center></h1></body>
 <style type="text/css">
 
 #container {
