--- a/index.html
+++ b/index.html
@@ -210,17 +210,15 @@ ul#description li a:hover span {
         <a>
             <span>
                 <strong>Intelligent brick</strong> 
-                <p>
-				Z-translates the sample chamber (QC) and adjusts the position of the Illumination Unit so that the light sheet is always in focus (following the optical model OM). Triggers the laser(s) / camera(s) to take images at each Z step.</p>
-        </a>
+                <p> Z-translates the sample chamber and adjusts the position of the Illumination Unit so that the light sheet is always in the image plage of the detection lens. Triggers the laser(s) / camera(s) to acquire images at each Z step.</p>
+            </span>
+	</a>
     </li>
     <li class="elecboard">
    		<a>
             <span>
                 <strong>Electronic board</strong>
-				<p>
-                The electronic board power and trigger the laser(s) / camera(s) to acquire images.
-				<p/>
+		<p>Powers lasers and adapts lasers / cameras triggers.<p/>	
             </span>
         </a>
     </li>
@@ -228,49 +226,39 @@ ul#description li a:hover span {
    		<a>
             <span>
                 <strong>Illumination Unit</strong>
-				<p>
-                A laser beam (LB) is spread by a glass tube (GT) and focused into an array of light sheets (CL+AR).
-				<p/>
+		<p>Spreads a laser beam by a glass tube and focus it into an array of light sheets.<p/>		
             </span>
         </a>
     </li>
 	<li class="glasstube">
-   		<a>
+   	<a>
             <span>
                 <strong>Glass Tube</strong>
-				<p>
-                Opens the collimated laser beam(s) into broad cone(s).
-				<p/>
+		<p>Spreads collimated laser beams into broad cones.<p/>		
             </span>
         </a>
     </li>
 	<li class="laswheel">
-   		<a>
+   	<a>
             <span>
                 <strong>Laser Wheel</strong>
-				<p>
-                Adjusts the lateral position of the moving laser to the position of the fixed laser.
-				<p/>
+		<p>Controls the lateral position of the moving laser so as to align it with the fixed laser.<p/>				
             </span>
         </a>
     </li>
 	<li class="cyllens">
-   		<a>
+   	<a>
             <span>
                 <strong>Cylindrical lens</strong>
-				<p>
-                Focuses the light sheet (LS) at the sample position to a Z-width of approximately 10 microns.
-				<p/>
+		<p>Focuses the light sheet at the sample position to a width of approximately 10 microns.<p/>			
             </span>
         </a>
     </li>
 	<li class="samplechamber">
-   		<a>
+   	<a>
             <span>
                 <strong>Sample Chamber</strong>
-				<p>
-                The sample is embedded in an agar cylinder (AC) held in the quartz chamber (QC). The light sheet position (IP) is adjusted thinnest at sample, optimizing optical sectioning (≈10 µm).
-				<p/>
+		<p>The sample is embedded in an agar cylinder held in a quartz chamber. The light sheet position is adjusted thinnest at sample, optimizing optical sectioning.<p/>	
             </span>
         </a>
     </li>
@@ -295,46 +283,38 @@ ul#description li a:hover span {
         </a>
     </li>
 	<li class="m1">
-   		<a>
+   	<a>
             <span>
                 <strong>Motor M1</strong>
-				<p>
-                Z-translates the sample chamber through a chain of gears.
-				<p/>
+		<p>Z-translates the sample chamber.<p/>		
             </span>
         </a>
     </li>
 	<li class="zoomlens">
-   		<a>
+   	<a>
             <span>
                 <strong>Zoom Lens</strong>
-				<p>
-                Forms an image of the fluoresence emitted in the light sheet imaging plane (IP) on the camera.
-				<p/>
+		<p>Forms an image of the fluoresence emitted in the light sheet plane on the camera.<p/>		
             </span>
         </a>
     </li>
 	<li class="camera">
-   		<a>
+   	<a>
             <span>
                 <strong>CMOS Camera</strong>
-				<p>
-                Collects the fluorescent light emitted in the imaging plane (IP).
-				<p/>
+		<p>Collects the fluorescent light emitted in the imaging plane.<p/>			
             </span>
         </a>
     </li>
 	<li class="fltwheel">
-   		<a>
+   	<a>
             <span>
                 <strong>Filter Wheel</strong>
-				<p>
-                Holds the emission filter attenuating light coming from the laser(s).
-				<p/>
+		<p>Holds the emission filter attenuating light coming from the lasers.<p/>		
             </span>
         </a>
     </li>
-	</ul>
+</ul>
 </div>
 </body>
 </html>
