--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@ ul#description li a:hover span {
 	<li class="illumunit">
    		<a>
             <span>
-                <strong>Illumination Unit</strong>
-		<p>Spreads a laser beam by a glass tube and focus it into an array of light sheets.<p/>		
+                <strong>Laser beam</strong>
+		<p>Laser source to form the array of light sheets.<p/>		
             </span>
         </a>
     </li>
@@ -266,9 +266,9 @@ ul#description li a:hover span {
    		<a>
             <span>
                 <strong>Sample Rotation</strong>
-				<p>
+		<p>
                 Rotates the sample through paired magnets (PM), motor M3 and a mechanism (RM) allowing the Z-translation of the chamber.
-				<p/>
+		<p/>
             </span>
         </a>
     </li>	
@@ -276,9 +276,9 @@ ul#description li a:hover span {
    		<a>
             <span>
                 <strong>Motor M2</strong>
-				<p>
+		<p>
                 Z-translates the ilumination chamber through a chain of gears.
-				<p/>
+		<p/>
             </span>
         </a>
     </li>
