--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ ul#description li a:hover span {
         <a>
             <span>
                 <strong>Intelligent brick</strong> 
-                <p> Z-translates the sample chamber and adjusts the position of the Illumination Unit so that the light sheet is always in the image plage of the detection lens. Triggers the laser(s) / camera(s) to acquire images at each Z step.</p>
+                <p> Z-translates the sample chamber and adjusts the position of the Illumination Unit so that the light sheet is always in the image plane of the detection lens. Triggers the laser(s) / camera(s) to acquire images after each Z step.</p>
             </span>
 	</a>
     </li>
@@ -218,7 +218,7 @@ ul#description li a:hover span {
    		<a>
             <span>
                 <strong>Electronic board</strong>
-		<p>Powers lasers and adapts lasers / cameras triggers.<p/>	
+		<p>Powers Lasers and triggers lasers / cameras.<p/>	
             </span>
         </a>
     </li>
@@ -226,7 +226,7 @@ ul#description li a:hover span {
    		<a>
             <span>
                 <strong>Laser beam</strong>
-		<p>Laser source to form the array of light sheets.<p/>		
+		<p>Laser source to form the light sheet.<p/>		
             </span>
         </a>
     </li>
@@ -234,7 +234,7 @@ ul#description li a:hover span {
    	<a>
             <span>
                 <strong>Glass Tube</strong>
-		<p>Spreads collimated laser beams into broad cones.<p/>		
+		<p>Spreads the collimated Laser beam into a (thick) sheet with large angular opening.<p/>		
             </span>
         </a>
     </li>
@@ -242,7 +242,7 @@ ul#description li a:hover span {
    	<a>
             <span>
                 <strong>Laser Wheel</strong>
-		<p>Controls the lateral position of the moving laser so as to align it with the fixed laser.<p/>				
+		<p>Controls the lateral position of the moving Laser so as to align it to the fixed Laser.<p/>				
             </span>
         </a>
     </li>
@@ -250,7 +250,7 @@ ul#description li a:hover span {
    	<a>
             <span>
                 <strong>Cylindrical lens</strong>
-		<p>Focuses the light sheet at the sample position to a width of approximately 10 microns.<p/>			
+		<p>Focuses the light sheet at the sample position to a width of approximately 10-15 microns.<p/>			
             </span>
         </a>
     </li>
@@ -258,7 +258,7 @@ ul#description li a:hover span {
    	<a>
             <span>
                 <strong>Sample Chamber</strong>
-		<p>The sample is embedded in an agar cylinder held in a quartz chamber. The light sheet position is adjusted thinnest at sample, optimizing optical sectioning.<p/>	
+		<p>The sample is embedded in an agarose cylinder held in a quartz chamber. The light sheet position is adjusted thinnest at sample, optimizing optical sectioning.<p/>	
             </span>
         </a>
     </li>
@@ -277,7 +277,7 @@ ul#description li a:hover span {
             <span>
                 <strong>Motor M2</strong>
 		<p>
-                Z-translates the ilumination chamber through a chain of gears.
+                Z-translates the Illumination Unit.
 		<p/>
             </span>
         </a>
@@ -294,7 +294,7 @@ ul#description li a:hover span {
    	<a>
             <span>
                 <strong>Zoom Lens</strong>
-		<p>Forms an image of the fluoresence emitted in the light sheet plane on the camera.<p/>		
+		<p>Focuses the fluoresence emitted in the light sheet plane to the camera.<p/>		
             </span>
         </a>
     </li>
@@ -310,7 +310,7 @@ ul#description li a:hover span {
    	<a>
             <span>
                 <strong>Filter Wheel</strong>
-		<p>Holds the emission filter attenuating light coming from the lasers.<p/>		
+		<p>Holds the emission filter attenuating background light (especially direct light from the Lasers).<p/>		
             </span>
         </a>
     </li>
